--- a/Sec_3/list_assignment_solution_module_3/list_assignment_solution.ipynb
+++ b/Sec_3/list_assignment_solution_module_3/list_assignment_solution.ipynb
@@ -13,13 +13,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]\n"
+     ]
+    }
+   ],
    "source": [
     "lst = list(range(1, 21))\n",
     "print(lst)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40430f6d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -72,13 +88,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100]\n"
+     ]
+    }
+   ],
    "source": [
     "squares = [x**2 for x in range(1, 11)]\n",
     "print(squares)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91ab4649",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -91,13 +123,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6, 8, 10, 12, 14, 16, 18, 20]\n"
+     ]
+    }
+   ],
    "source": [
     "evens = [x for x in lst if x % 2 == 0]\n",
     "print(evens)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8e26c4f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75306d62",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -110,9 +166,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original list: [19, 20, 7, 6, 9, 17, 13, 16, 2, 5, 12, 13, 11, 7, 18]\n",
+      "Sorted in ascending order: [2, 5, 6, 7, 7, 9, 11, 12, 13, 13, 16, 17, 18, 19, 20]\n",
+      "Sorted in descending order: [20, 19, 18, 17, 16, 13, 13, 12, 11, 9, 7, 7, 6, 5, 2]\n",
+      "List with duplicates removed: [2, 5, 6, 7, 9, 11, 12, 13, 16, 17, 18, 19, 20]\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "\n",
@@ -140,9 +207,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix:\n",
+      "[1, 2, 3]\n",
+      "[4, 5, 6]\n",
+      "[7, 8, 9]\n",
+      "Element at second row and third column: 6\n"
+     ]
+    }
+   ],
    "source": [
     "matrix = [\n",
     "    [1, 2, 3],\n",
@@ -258,9 +337,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original list: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+      "Modified list: [1, 2, 4, 6, 8, 99, 9, 10]\n"
+     ]
+    }
+   ],
    "source": [
     "lst = list(range(1, 11))\n",
     "print(f\"Original list: {lst}\")\n",
@@ -303,9 +391,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original list: [1, 2, 3, 4, 5]\n",
+      "Reversed list: [5, 4, 3, 2, 1]\n"
+     ]
+    }
+   ],
    "source": [
     "def reverse_list(lst):\n",
     "    return lst[::-1]\n",
@@ -351,20 +448,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "List 1: [1, 2, 3, 4, 5, 5]\n",
+      "List 2: [3, 4, 5, 6, 7]\n",
+      "Intersection: [3, 4, 5, 5]\n"
+     ]
+    }
+   ],
    "source": [
     "def list_intersection(lst1, lst2):\n",
     "    return [x for x in lst1 if x in lst2]\n",
     "\n",
-    "list1 = [1, 2, 3, 4, 5]\n",
+    "list1 = [1, 2, 3, 4, 5, 5]\n",
     "list2 = [3, 4, 5, 6, 7]\n",
     "intersection = list_intersection(list1, list2)\n",
     "print(f\"List 1: {list1}\")\n",
     "print(f\"List 2: {list2}\")\n",
     "print(f\"Intersection: {intersection}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61b46adc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -383,7 +498,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
