--- a/Sec_3/set_assignments_solution/sets_assignment.ipynb
+++ b/Sec_3/set_assignments_solution/sets_assignment.ipynb
@@ -201,18 +201,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 55,
    "id": "decfc834",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 1, 2: 2, 3: 3, 4: 4}\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "### Assignment 7: Subsets and Supersets\n",
     "\n",
     "# Create two sets: one with the first 5 positive integers and another with \n",
     "# the first 3 positive integers. Check if the second set is a subset of the \n",
-    "# first set and if the first set is a superset of the second set. Print the results.\n",
-    "\n"
+    "# first set and if the first set is a superset of the second set. Print the results."
    ]
   },
   {
